Fixed bug #34794 (proc_close() hangs when used with two processes)